# JlTranslator

./: .gitignore  CMakeLists.txt  JlWebTranslatorWrapper.cpp  JlWebTranslatorWrapper.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QSettingsDlg.h  StringUtil.h  cmake_build.cmd  main.cpp  pimpl.h  qtcreator_run.cmd  set_qt_env_var.cmd
JlTranslatorTool/: AboutThirdPartySoftware.txt  CMakeLists.txt  JlDtdFileProcessor.cpp  JlDtdFileProcessor.h  JlTranslatorTool.qrc  JlWebTranslatorWrapper.cpp  LangsAvailable.cpp  LangsAvailable.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QSettingsDlg.cpp  QSettingsDlg.h  QSettingsDlg.ui  main.cpp  pimpl.h  test.cpp
